# Zadanie_2_Tokarski_Piotr

./: INSTALL.md  Makefile  Makefile.am  Makefile.in  PiotrTokarski  README.md  config.status  configure  configure.ac  main.c
autom4te.cache/: output.1  requests  traces.0  traces.1
dlls/: kwadrat.c  kwadrat.h  szescian.c  szescian.h
